--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@
 }
 
 :root {
-    --font-raleway: "Raleway", sans-serif;
-    --font-open-sans: "Open Sans", sans-serif;
-    --button-radius: 35px;
     --color-primary: #08a6e4;
     --color-primary-shadow: rgba(7, 172, 230, 0.16);
     --color-redish: #fb3b64;
@@ -16,23 +13,31 @@
     --color-white: #ffffff;
     --color-grey: #a5a5a5;
     --color-light-grey: #f7f7f7;
+    --button-radius: 35px;
+    --font-raleway: "Raleway", sans-serif;
+    --font-open-sans: "Open Sans", sans-serif;
 }
 
 body {
-    font-family: var(--font-open-sans);
+    font-family: "Open Sans", sans-serif;;
+    width: 100%;
+}
+
+.container {
+    max-width: 1352px;
+    margin: 0 auto;
 }
 
 /*HEADER*/
 .page-header {
+    height: 70px;
     width: 100%;
     background: white;
     box-shadow: 0 3px 6px #00000029;
 }
 
 .page-header-container {
-    width:1352px;
-    margin: 0 auto;
-    height: 70px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,7 +48,8 @@ body {
 }
 
 .page-nav-list li {
-    padding: 28px;
+    padding: 28px 18px 22px;
+    border-bottom: 4px solid transparent;
     color: #A5A5A5;
     font-size: 11px;
     font-weight: bold;
@@ -55,6 +61,7 @@ body {
 
 .page-nav-list li:hover {
     color: black;
+    border-color: #08A6E4;
     cursor: pointer;
 }
 
@@ -84,8 +91,8 @@ body {
     padding-top: 130px;
 }
 
-.page-open-header {
-    font-family: var(--font-raleway);
+.page-open-title {
+    font-family: "Raleway", sans-serif;;
     font-size: 49px;
     font-weight: 300;
     color: black;
@@ -110,3 +117,655 @@ body {
     color: white;
     font-weight: bold;
 }
+
+
+.page-open-img {
+    max-width: 1352px;
+}
+
+/*STATISTICS*/
+.statistics-section-container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 150px;
+    height: auto;
+}
+
+.statistics-title {
+    font-size: 36px;
+    font-family: "Raleway", sans-serif;;
+    color: black;
+}
+
+.number-text {
+    font-size: 20px;
+    font-family: "Raleway", sans-serif;;
+    font-weight: 800;
+    color: black;
+    letter-spacing: 6px;
+    padding-top: 13px;
+    padding-bottom: 19px;
+
+}
+
+.normal-text {
+    font-size: 17px;
+    font-family: "Raleway", sans-serif;;
+    color: #A5A5A5;
+    text-align: center;
+}
+
+.circle1 {
+    width: 63px;
+    height: 63px;
+    border-radius: 50%;
+    background-color: #FB3B64;
+    position: relative;
+}
+
+.person-image {
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+}
+
+.circle2 {
+    width: 63px;
+    height: 63px;
+    border-radius: 50%;
+    background-color: #08A6E4;
+    position: relative;
+}
+
+.eye-image {
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+}
+
+.circle3 {
+    width: 63px;
+    height: 63px;
+    border-radius: 50%;
+    background-color: #55DFB4;
+    position: relative;
+}
+
+.catalog-image {
+    position: absolute;
+    left: 30px;
+    bottom: 10px;
+}
+
+.statistics-section-wrapper {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-top: 100px;
+    width: 100%;
+}
+
+.statistic-column-first {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.statistic-column-second {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.statistic-column-third {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+/*BENEFITS*/
+.benefits-section {
+    width: 100%;
+    padding: 70px 0;
+    background-color: #f7f7f7;
+}
+
+.benefits-section-container {
+    padding: 0 100px;
+}
+
+.first-benefits-box {
+    background: white;
+    margin:37px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1124px;
+    height: 370px;
+    border: 1px solid #E8E9ED;
+    border-radius: 5px;
+    padding: 35px 35px 10px 35px;
+    position: relative;
+    z-index: 1;
+}
+
+.benefits-content {
+    max-width: 416px;
+    margin: 90px 35px;
+}
+
+.benefits-title {
+    font-size: 36px;
+    font-family: "Raleway", sans-serif;;
+    color: black;
+}
+
+.benefits-description {
+    margin-top: 30px;
+    line-height: 20px;
+}
+
+.first-benefit-photo {
+    margin-right: 117px;
+    margin-bottom: 38px;
+}
+
+.first-benefit-photo img {
+    width: 386px;
+    height: 219px;
+    margin: 75px 80px 25px 170px;
+    position: relative;
+    z-index: 1;
+}
+
+.second-benefits-box {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    width: 1124px;
+    height: 370px;
+    background-color: white;
+    border: 1px solid #E8E9ED;
+    border-radius: 5px;
+    position: relative;
+}
+
+.second-benefits-photo img {
+    width: 426px;
+    height: auto;
+    margin: 30px 192px 13px 70px;
+    z-index: 1;
+}
+
+.second-benefits-box .benefits-title {
+    margin-bottom: 30px;
+}
+
+.third-box-position {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1124px;
+    padding-top: 38px;
+}
+
+.third-box-position .third-benefits-box {
+    width: 623px;
+    height: 370px;
+}
+
+.third-benefits-box {
+    background-color: white;
+    text-align: left;
+}
+
+.third-benefits-photo {
+    background-color: #55dfb4;
+    width: 440px;
+    height: 370px;
+    border: 1px solid #E8E9ED;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 60px;
+}
+
+.third-benefits-photo img {
+    width: 295px;
+    height: 208px;
+    position: relative;
+}
+
+.third-benefits-box h2 {
+    text-align: left;
+    font-size: 36px;
+    font-family: sans-serif;
+    margin-top: -50px;
+    width: 350px;
+}
+
+.third-benefits-box p {
+    text-align: left;
+    font-family: sans-serif;
+    padding-top: 30px;
+}
+
+.benefits-content {
+
+}
+
+.content_substance {
+    height: 230px;
+}
+
+.content_substance::after{
+    content: "";
+    display: block;
+    width: 328px;
+    margin: 45px 0 20px 0;
+    border-radius: 20px;
+}
+
+.line1::after{
+    border: 2px solid #fb3b64;;
+}
+.line2::after{
+    border: 2px solid #08a6e4;;
+}
+.line3::after{
+    border: 2px solid #55dfb4;
+}
+
+.shape {
+    position: relative;
+}
+
+.shape:nth-child(1)::before {
+    content: "";
+    width: 200px;
+    height: 200px;
+    background: #fb3b64;
+    position: absolute;
+    border-radius:41px;
+    right: 90px;
+    top: 30px;
+    z-index: 0;
+    transform: rotate(45deg);
+}
+
+
+/*PRICE SECTION*/
+
+.pricing-section {
+    width: 100%;
+    padding: 100px 0;
+    background-color: white;
+    position: relative;
+}
+
+.pricing-section .container {
+    display: flex;
+    flex-direction: column;
+}
+
+.pricing-box {
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.first-price-option {
+    width: 372px;
+    height: 461px;
+    border-radius: 18px;
+    text-align: center;
+    padding: 34px 120px;
+    margin-top: 70px;
+    margin-right: 60px;
+    border: 1px solid #fb3b64;
+}
+
+.second-price-option {
+    width: 405px;
+    height: 500px;
+    border-radius: 18px;
+    text-align: center;
+    padding: 34px 120px;
+    margin-top: 70px;
+    margin-right: 60px;
+    border: 1px solid #08a6e4;
+}
+
+.third-price-option {
+    width: 372px;
+    height: 461px;
+    border-radius: 18px;
+    text-align: center;
+    padding: 34px 120px;
+    margin-top: 70px;
+    margin-right: 60px;
+    border: 1px solid #55dfb4;
+}
+
+.pricing-section h2 {
+    text-align: center;
+    font-size: 36px;
+}
+
+.pricing-box h3 {
+    font-size: 21px;
+    font-family:"Raleway", sans-serif;
+    color: #13253B;
+    padding-bottom: 14px;
+    font-weight: bold;
+}
+
+.price1 {
+    font-size: 46px;
+    color: #fb3b64;
+    padding: 35px 0 100px 0;
+}
+
+.price2 {
+    font-size: 46px;
+    color: #08a6e4;
+    padding: 35px 0 40px 0;
+}
+
+.price3 {
+    font-size: 46px;
+    color: #55dfb4;
+    padding: 35px 0 40px 0;
+}
+
+h5 {
+    font-size: 12px;
+    font-weight: bold;
+    color: #13253B;
+    padding-bottom: 60px;
+}
+
+.first-price-option ul li {
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 14px;
+
+}
+
+.first_price-option ul li::before {
+    content: url("../assets/Ckechmark-1.svg");
+    width: 11px;
+    height: 11px;
+    padding-right: 10px;
+}
+
+.second-price-option ul li {
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 14px;
+    font-family: "Open Sans",sans-serif;
+}
+
+.third-price-option ul li {
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 14px;
+    font-family: "Open Sans",sans-serif;
+}
+
+.close::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    margin-right: 10px;
+    background-image: url("../assets/Close.svg");
+}
+.check::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    margin-right: 10px;
+    background-image: url("../assets/Checkmark-1.svg");
+}
+.first-price-option:hover {
+    cursor: pointer;
+}
+
+.second-price-option:hover {
+    cursor: pointer;
+}
+
+.third-price-option {
+    cursor: pointer;
+}
+
+.btn1 {
+    position: relative;
+    font-size: 13px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    background-color: #fb3b64;
+    bottom: -25px;
+    padding: 16px 58px;
+    border-radius: 23px;
+
+}
+
+.btn2 {
+    position: relative;
+    font-size: 13px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    background-color: #08a6e4;;
+    bottom: -60px;
+    padding: 16px 58px;
+    border-radius: 23px;
+}
+
+.btn3 {
+    position: relative;
+    font-size: 13px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    background-color: #55dfb4;
+    bottom: -25px;
+    padding: 16px 58px;
+    border-radius: 23px;
+}
+/*CONTACT*/
+.contact-section .container {
+    margin: 0 auto;
+    height: 375px;
+    display: flex;
+    align-items: flex-start;
+    padding: 100px 20%;
+}
+
+.contact-section h2 {
+    font-size: 49px;
+    color: black;
+    font-family: "Raleway", sans-serif;
+    width: 345px;
+    margin-bottom: 22px;
+    text-align: left;
+}
+
+.contact-info-box p {
+    padding-bottom: 42px;
+    text-align: left;
+
+}
+
+.contact-info  {
+    color: #a5a5a5;
+    text-align: left;
+    font-weight: 600;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.contact-info img {
+    margin-right: 10px;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 115px;
+}
+
+.form-label {
+    text-align: left;
+    color: #08A6E4;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 3.28px;
+    padding-bottom: 3px;
+
+}
+
+
+.checkbox-container label {
+    text-align: left;
+    color: #707070;
+    font-size: 12px;
+}
+
+#checkbox {
+    appearance: none;
+    width: 24px;
+    height: 24px;
+}
+
+input[type="email"],
+input[type="text"]{
+    font-size: 25px;
+    appearance: none;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #95989A;
+    margin-bottom: 30px;
+}
+
+.checkbox-container input[type="checkbox"]:checked {
+    content: url("../assets/Checkmark.svg");
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox-container input[type="checkbox"]{
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox-container input[type="checkbox"]{
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #95989A;
+    border-radius: 4px;
+    float: left;
+    margin-right: 5px;
+    margin-bottom: 120px;
+    padding: 3px;
+    cursor: pointer;
+}
+
+.contact-form button {
+    width: 225px;
+    height: 57px;
+    background-color: #08A6E4;
+    color: white;
+    box-shadow: 5px 10px 14px #07ACE629;
+    border-radius: 35px;
+    font-size: 13px;
+    font-weight: bold;
+    border: none;
+    margin-top: 20px;
+    position: absolute;
+
+}
+
+.checkbox-container p {
+    font-size: 12px;
+    color: #707070;
+    text-align: left;
+
+
+}
+
+.checkbox-container {
+    position: relative;
+}
+
+/*FOOTER*/
+.footer {
+    width: 100%;
+    height: 89px;
+    background-color:#F7F7F7 ;
+    box-shadow: 0 -5px 40px #00000029;
+    padding: 20px 0;
+    margin-top: 100px;
+
+}
+
+ .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+.footer-logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 120px;
+
+}
+
+.footer-logo .logo {
+    font-size: 26px;
+    color: #08A6E4;
+    font-family: "Raleway", sans-serif;
+    margin-bottom: 7px;
+    text-decoration: none;
+
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rights {
+    font-size: 11px;
+    color: #A5A5A5;
+    line-height: 15px;
+    margin-top: 7px;
+}
+
+.twitter {
+    margin-right: 25px;
+}
+
