--- a/scss/sections/open.scss
+++ b/scss/sections/open.scss
@@ -67,9 +67,4 @@
   }
 }
 
-//page-open-section -> .open-section
-//page-open-container -> .open-section__container
-//page-open-title -> .open-section__title
-//page-open-text -> .open-section__text
-//page-open-btn -> .open-section__button
-//page-open-img -> .open-section__image
+//a
