--- a/scss/sections/statistics.scss
+++ b/scss/sections/statistics.scss
@@ -112,21 +112,7 @@
 
 }
 
-//statistics-section ->statistics-section
-//statistics-section-container -> statistics-section__container
-//statistics-title -> statistics-section__title
-//number-text -> statistics-section__label
-//normal-text -> statistics-section__description
-//circle1 -> statistics-section__entries
-//circle2 -> statistics-section__products
-//circle3 -> statistics-section__posts
-//statistics-section-wrapper -> statistics-section__wrapper
-//statistic-column-first -> statistics-section__column
-//statistic-column-second -> statistics-section__column
-//statistic-column-third -> statistics-section__column
-// person-image -> statistics-section__image statistics-section__image--person
-// eye-image -> statistics-section__image statistics-section__image--eye
-// catalog-image -> statistics-section__image statistics-section__image--catalog
+//a
 
 
 
